--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for devops_ansible-role-node-exporter
+- name: restart node-exporter
+  systemd_service:
+    name: node-exporter
+    daemon-reload: true
+    enabled: true
+    state: restarted
