--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,6 +25,7 @@
 - name: Extract NodeExporter files
   unarchive:
     src: /tmp/node-exporter.tar.gz
+    remote_src: true
     dest: /opt
     owner: '{{ user.name }}'
     group: '{{ group.name }}'
