--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,15 +16,9 @@
     state: present
   register: user
 
-- name: Fetch NodeExporter
-  get_url:
-    url: https://github.com/prometheus/node_exporter/releases/download/v{{ version }}/node_exporter-{{ version }}.linux-arm64.tar.gz
-    dest: /tmp/node-exporter.tar.gz
-  notify: restart node-exporter
-
 - name: Extract NodeExporter files
   unarchive:
-    src: /tmp/node-exporter.tar.gz
+    src: node_exporter-1.7.0.linux-arm64.tar.gz
     dest: /opt
     owner: '{{ user.name }}'
     group: '{{ group.name }}'
